--- a/.github/workflows/master_expense-report-avo.yml
+++ b/.github/workflows/master_expense-report-avo.yml
@@ -68,11 +68,11 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_1DD7F65CBE7149F1B9B5C792356A7155 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5645F723519947A9BD18C6F8C09AA8A8 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_40D0E39C8E3242F2849729E99E01AB5A }}
-
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
         with:
-          app-name: 'Expense-report-avo'
-          slot-name: 'Production'
+          app-name: Expense-report-avo
+          slot-name: Production
+          package: .
+          retryCount: 3
           
