--- a/.github/workflows/master_expense-report-avo.yml
+++ b/.github/workflows/master_expense-report-avo.yml
@@ -48,7 +48,6 @@ jobs:
     needs: build
     environment:
       name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write
     strategy:
@@ -56,7 +55,7 @@ jobs:
       max-parallel: 1
       matrix:
         attempt: [1, 2, 3]
-  
+
     steps:
     - name: Download artifact from build job
       uses: actions/download-artifact@v4
@@ -72,6 +71,12 @@ jobs:
         client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_1DD7F65CBE7149F1B9B5C792356A7155 }}
         tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5645F723519947A9BD18C6F8C09AA8A8 }}
         subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_40D0E39C8E3242F2849729E99E01AB5A }}
+
+    - name: Restart Azure Web App
+      uses: azure/cli@v2
+      with:
+        inlineScript: |
+          az webapp restart --name Expense-report-avo --resource-group <your-resource-group-name>
 
     - name: Deploy to Azure Web App (Attempt ${{ matrix.attempt }})
       uses: azure/webapps-deploy@v3
